# protegrity-developer-edition-trial-center

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY_AUDIT.md  __init__.py  app.py  docker-compose.yml  ec2_final_setup.sh  ec2_setup.sh  launch_trial_center.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run_trial_center.py  trial_center_pipeline.py
.streamlit/: config.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md
scripts/: deploy.bat  deploy.sh
src/trial_center/: __init__.py  app.py  cli.py
src/trial_center/api/: __init__.py  health.py
src/trial_center/core/: __init__.py  pipeline.py
src/trial_center/utils/: __init__.py  validation.py
tests/: conftest.py  test_trial_center_forge.py  test_trial_center_pipeline.py  test_trial_center_sanitizer.py
tests/unit/: test_trial_center_forge.py  test_trial_center_sanitizer.py
